Corrected soem layout spacing, amended iput type, added max-width on footer logos, header button hidden. #4

--- a/assets/styles/css/base/base.css
+++ b/assets/styles/css/base/base.css
@@ -27,6 +27,8 @@ html {
     line-height: 1.5;
 }
 
+
+
 body {
     margin: 0;
     overflow-x: hidden;
@@ -60,10 +62,12 @@ h2 {
 
 label {
     color: var(--primary-action-color);
+    display: flex;
     font-size: 0.8em;
     font-style: italic;
     font-weight: 300;
     position: relative;
+    width: 100%;
 }
 
 legend {
@@ -74,6 +78,7 @@ legend {
     margin-left: auto;
     margin-right: auto;
     margin-top: 4rem;
+    text-align: center;
     text-transform: initial; 
 }
 
@@ -87,6 +92,9 @@ blockquote {
     font-size: 1em;
     font-style: italic;
     font-weight: 300;
+    margin-bottom: 6em;
+    margin-left: 8.33%;
+    margin-right: 8.33%;
     padding-left: 1em;
 }
 
@@ -101,7 +109,7 @@ button {
     font-weight: 700;
     line-height: 1;
     min-width: 10rem;
-    padding: 0.5rem 2rem;
+    padding: 0.6em 2em 0.4em 2rem;
     text-transform: uppercase;
 }
 
@@ -143,11 +151,15 @@ fieldset button {
 
 fieldset {
     border: none;
-    padding: calc(100vw/12);
+    padding-bottom: 3em;
+    padding-top: 2em;
+    padding-left: calc(100vw/12);
+    padding-right: calc(100vw/12);
 }
 
 input,
 textarea {
+    background-color: rgba(255,255,255,0.8);
     border: var(--input-border-style);
     border-radius: var(--border-radius);
     box-sizing: border-box;
@@ -165,20 +177,28 @@ textarea {
     width: 100%;
 }
 
+input:focus,
+input:active,
+textarea:focus,
+textarea:active {
+    background-color: rgba(255,255,255,1);
+}
+
 label.required::after {
     color: var(--primary-action-color);
     content: "*";
     font-size: 2.3em;
     font-style: normal;
     font-weight: 700;
-    left: -0.2em;
+    left: calc(100% - 0.8em);
     position: absolute;
-    top: 0.75em;
+    top: 0.8em;
     width: 100%;
     z-index: 2;
 }
 
 textarea {
     line-height: 1.5;
+    min-height: 6.4em;
     resize: vertical;
 }
