--- a/assets/styles/css/handheld/footer.css
+++ b/assets/styles/css/handheld/footer.css
@@ -21,6 +21,8 @@ footer a {
     display: flex;
     display: -webkit-flex;
     justify-content: space-around;
+    margin: auto;
+    max-width: 20em;
     width: 100%;
 }
 
